# GoIT-homeworks

HW2_7/students/students/test/: consumer.py  models.py
HW_06/: homework_m_06.py  sort1.py  sort2.py
HW_07/clean_folder/: README.md  setup.py
HW_07/clean_folder/clean_folder/: __init__.py  clean.py
hw2_10_django/: pyproject.toml
hw2_10_django/hw2_10_django/quotesmaster/: manage.py
hw2_10_django/hw2_10_django/quotesmaster/quotes/: models.py  utils.py  views.py
hw2_10_django/hw2_10_django/quotesmaster/quotes/migrations/: 0001_initial.py
hw2_10_django/hw2_10_django/quotesmaster/quotes/static/quotes/: style.css
hw2_10_django/hw2_10_django/quotesmaster/quotes/templates/quotes/: base.html  index.html
hw2_10_django/hw2_10_django/quotesmaster/quotes/templatetags/: extract.py
hw2_10_django/hw2_10_django/quotesmaster/quotesmaster/: asgi.py  settings.py  urls.py  wsgi.py
hw2_10_django/hw2_10_django/quotesmaster/utils/: migration.py
hw2_11/docs/_build/doctrees/: environment.pickle  index.doctree
hw2_11/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
hw2_11/postgres-data/global/: pg_control
hw2_11/postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
hw2_9/: authors.json  calc.py
hw2_9/hw2_9/: finder.py  load_from_json.py  models.py
