[tool.poetry]
name = "hw2-10-django"
version = "0.1.0"
description = ""
authors = ["ZhovtenkoA <127408550+ZhovtenkoA@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw2_10_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
pymongo = "^4.5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
